Fixed some alignment issues

--- a/src/app/components/main-view/main-view.component.css
+++ b/src/app/components/main-view/main-view.component.css
@@ -11,6 +11,18 @@ p {
   color      : #999;
 }
 
+.container-fluid{
+  margin: 0;
+  padding: 0;
+  left: 0;
+}
+
+.navbar {
+  margin: 0;
+  padding: 0;
+  left: 0;
+}
+
 #sidebar {
   width     : 250px;
   position  : fixed;
@@ -41,7 +53,7 @@ p {
   width: 100%;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1000px) {
   #sidebar {
     margin-left: -250px;
   }
@@ -57,8 +69,11 @@ p {
   #content.active {
     width: calc(100% - 250px);
   }
+}
 
+@media (max-width: 768px) {
   #collapseHeader {
     display: none;
   }
+
 }
