--- a/src/app/components/movies/movies.component.css
+++ b/src/app/components/movies/movies.component.css
@@ -1,7 +1,3 @@
 h2 {
   text-align: center;
 }
-
-.addMovie {
-  text-align: center;
-}
